--- a/app/views/home/_top_season.html.haml
+++ b/app/views/home/_top_season.html.haml
@@ -1,5 +1,5 @@
 %li
-  %a{:href=>profile_path(top_season.to_param)}
+  %a{:href=>profile_path(top_season.profile.id)}
     - if top_season.picture_file_name
       = image_tag top_season.picture(:thumb), :class => "avatar"
     - else
