--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,14 +45,14 @@
             %li= link_to "pronósticos", predictions_path
             %li.last
               - if account_signed_in?
-                = link_to "mi perfil", profile_path(current_account.id)
+                = link_to "mi perfil", profile_path(current_account.profile.id)
               - else
                 = link_to "entrar", new_account_registration_path
                 
           #login
             - if account_signed_in?
               #top_profile
-                = link_to current_account.email, profile_path(current_account.id)
+                = link_to current_account.email, profile_path(current_account.profile.id)
                 = link_to "salir", destroy_account_session_path              
             - else
               = link_to "iniciar sesión", new_account_session_path, {:id=>"new_session", :class=>"button log-in"}
