--- a/app/views/home/_last_prediction.html.haml
+++ b/app/views/home/_last_prediction.html.haml
@@ -1,7 +1,10 @@
 %li{:class=>(cycle("odd","even"))}
   .meta
     %a{:href=>profile_path(last_prediction.account.to_param)}
-      %img.avatar{:alt => "", :height => "51", :src => "/images/missing.png", :width => "51"}/
+      - if last_prediction.account.picture_file_name
+        = image_tag last_prediction.account.thumbnail(:thumb),:size=>"51x51", :class => "avatar"
+      - else
+        %img.avatar{:alt => "", :height => "51", :src => "/images/avatar.jpg", :width => "51"}/
     %p= last_prediction.account.name
     %p.title= last_prediction.account.title
   %table{:cellpadding => "0", :cellspacing => "0"}
