--- a/app/views/member/messages/show.html.erb
+++ b/app/views/member/messages/show.html.erb
@@ -2,10 +2,10 @@
 <br />
 <p>
   <strong><%= I18n.t("tog_mail.model.from") %>:</strong>
-  <%=h @message.from.login %>
+  <%=h @message.from.email %>
   <br/>
   <strong><%= I18n.t("tog_mail.model.to") %>:</strong>
-  <%=h @message.to.login %>
+  <%=h @message.to.email %>
 </p>
 
 <p>
