--- a/app/views/shared/_profiles_portlet.html.erb
+++ b/app/views/shared/_profiles_portlet.html.erb
@@ -5,12 +5,13 @@
         <% unless items.blank? %>
           <% for item in items %>
             <li>
-              <%= link_to item.full_name, profile_path(item), :title => item.full_name %>
-              <%  if item.account.picture_file_name %>
-              <%= image_tag item.account.thumbnail(:thumb),:size=>"51x51", :class => "avatar" %>
-              <% else %>
-                <img src="/images/avatar.jpg" class="avatar" alt="" height="45",width="45" />
-              <%- end -%>
+              <% link_to profile_path(item), :title => item.full_name do %>
+                <%  if item.account.picture_file_name %>
+                <%= image_tag item.account.thumbnail(:thumb),:size=>"51x51", :class => "avatar" %>
+                <% else %>
+                  <img src="/images/avatar.jpg" class="avatar" alt="" height="45",width="45" />
+                <%- end -%>
+              <% end %>
             </li>
           <% end %>
         <% else %>
