--- a/app/views/matches/show.haml
+++ b/app/views/matches/show.haml
@@ -43,7 +43,11 @@
     - @match.predictions.each do |prediction|
       %li{:class=>(cycle("odd","even"))}
         .meta
-          %img.avatar{:alt => "", :height => "51", :src => "/images/missing.png", :width => "51"}/
+          %a{:href=>profile_path(prediction.account.profile.id)}
+            - if prediction.account.picture_file_name
+              = image_tag prediction.account.thumbnail(:thumb),:size=>"51x51", :class => "avatar"
+            - else
+              %img.avatar{:alt => "", :height => "51", :src => "/images/avatar.jpg", :width => "51"}/
           %p= prediction.account.name
           %p.title= prediction.account.title
         %table{:cellpadding => "0", :cellspacing => "0"}
