--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,4 +1,4 @@
-%li{:class=>(cycle("odd","even"))}
+%li{:class=>(cycle("odd","even")), :id=>"comment_#{comment.id}"}
   .meta
     %img.avatar{:alt => "", :height => "51", :src => "/images/missing.png", :width => "51"}/
     %p
