--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -16,6 +16,34 @@
 	font-style: normal;
 }
 
+.streams #content li.odd {
+	list-style: none;
+	overflow: hidden;
+}
+
+.streams #content li.odd div.meta {
+	float: left;
+	margin-right: 10px;
+	text-align: center;
+}
+
+#content li.odd div.meta p.title {
+	font-weight: bold;
+}
+
+.streams #content li.odd div.content {
+	float: left;
+	width: 500px;
+	border: 1px solid #8da15e;
+	padding: 10px 20px;
+}
+
+.streams #content li.odd div.content a {
+	color: #3a9154;
+	font-weight: bold;
+}
+
+
 .predictions.home #most-predicted div.container ul li {
 	margin-bottom: 10px !important;
 }
