--- a/app/views/streams/_activity.html.haml
+++ b/app/views/streams/_activity.html.haml
@@ -26,3 +26,5 @@
             %p= link_to truncate(activity.item.content,100), polymorphic_url(activity.item.commentable,:anchor=>"comment_#{activity.item.id}")
         - when "Avatar"
           = link_to "cambiado su avatar", profile_path(activity.account.profile.id)
+        - else
+          "pasado un buen rato con sus amigos en Patatoon"
