More clothes than ever

--- a/app/views/streams/_activity.html.haml
+++ b/app/views/streams/_activity.html.haml
@@ -27,4 +27,4 @@
         - when "Avatar"
           = link_to "cambiado su avatar", profile_path(activity.account.profile.id)
         - else
-          "pasado un buen rato con sus amigos en Patatoon"
+          pasado un buen rato con sus amigos en Patatoon
