--- a/app/views/home/_last_prediction.html.haml
+++ b/app/views/home/_last_prediction.html.haml
@@ -12,7 +12,7 @@
       %tr.header
         %td.first Partido
         %td
-          .flag.small{:class=>last_prediction.match.local.flag_name}= last_prediction.match.local.short_name
+          .flag{:class=>last_prediction.match.local.flag_name}= last_prediction.match.local.short_name
         %td
           .flag.small{:class=>last_prediction.match.visitor.flag_name}= last_prediction.match.visitor.short_name
       %tr
