--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -583,6 +583,27 @@ form#new_comment.formtastic.comment {
 	text-transform:uppercase;
 	}
 	
+	
+  li div.flag {
+  	float:left;
+  	height:32px;
+  	line-height:32px;
+  	width:65px;
+  	padding:5px 0;	
+  	text-transform:uppercase;
+  	}
+
+  td.flag {
+  	width:65px;	
+  	text-transform:uppercase;	
+  }
+
+  li img.flag,
+  td img.flag{	
+  	float:left;
+  	margin-right:5px;
+  }
+	
 #nexts-games li p{
 	line-height:42px;
 	height:42px;
@@ -693,6 +714,11 @@ form#new_comment.formtastic.comment {
 	width:90px;
 }
 
+#last-predicted table tr, #last-predicted table td {
+height:34px;
+line-height:34px;
+}
+
 #last-predicted li div.meta .title {
 	font-weight:bold;
 	}
@@ -700,6 +726,7 @@ form#new_comment.formtastic.comment {
 #last-predicted li img {
 	display:block;
 	margin:0 auto 3px auto;
+	margin-right: 5px;
 }
 	
 #last-predicted li p {
@@ -717,11 +744,11 @@ form#new_comment.formtastic.comment {
 	background:#EDF5D7;
 	}
 	
-#last-predicted table .flag {
-	background-position:left center;
-	padding-left:36px;
-	text-transform:uppercase;
-}
+/*#last-predicted table .flag {
+  background-position:left center;
+  padding-left:36px;
+  text-transform:uppercase;
+}*/
 
 #last-predicted table tr,
 #last-predicted table td{
@@ -1511,3 +1538,25 @@ div#profile_data h3 {
 .messages #content table.tableB tbody tr.pair {
 	background-color: #e6ebd6;
 }
+
+
+li img.flag,
+td img.flag{        
+       float:left;
+       margin-right:5px;
+}
+
+li div.flag {
+       float:left;
+       height:32px;
+       line-height:32px;
+       width:65px;
+       padding:5px 0;        
+       text-transform:uppercase;
+       }
+td.flag {
+       width:65px;        
+       text-transform:uppercase;        
+}
+
+
