--- a/app/views/home/_last_prediction.html.haml
+++ b/app/views/home/_last_prediction.html.haml
@@ -11,10 +11,10 @@
     %tbody
       %tr.header
         %td.first Partido
-        %td
+        %td.flag
           = flag_image(last_prediction.match.local.flag_name,"small")
           = last_prediction.match.local.short_name
-        %td
+        %td.flag
           = flag_image(last_prediction.match.visitor.flag_name,"small")
           = last_prediction.match.visitor.short_name
       %tr
