--- a/app/views/home/_next_match.html.haml
+++ b/app/views/home/_next_match.html.haml
@@ -5,7 +5,7 @@
       .flag
         = flag_image(next_match.local.flag_name,"small","32x32")
         = next_match.local.short_name
-      .small
+      .flag
         = flag_image(next_match.visitor.flag_name,"small","32x32")
         = next_match.visitor.short_name 
       %p= (distance_of_time_in_words_to_now(next_match.played_at).gsub("hace", "")) #.split(" ").join("<br/>")
