--- a/app/views/home/_most_predicted.html.haml
+++ b/app/views/home/_most_predicted.html.haml
@@ -2,7 +2,11 @@
 
 %li{:class=>last_class}
   %a{:href => match_path(most_predicted)}
-    .flag.small{:class=>most_predicted.local.flag_name, :title=>most_predicted.local.name}= most_predicted.local.short_name
-    .flag.small{:class=>most_predicted.visitor.flag_name, :title=>most_predicted.visitor.name}= most_predicted.visitor.short_name
+    .flag
+      = flag_image(most_predicted.local.flag_name,"small","32x32")
+      = most_predicted.local.short_name
+    .flag
+      = flag_iamge(most_predicted.visitor.flag_name,"small","32x32")
+      = most_predicted.visitor.short_name
     %p
       = "#{most_predicted.predictions_count} pronósticos"
