--- a/app/views/home/_most_predicted.html.haml
+++ b/app/views/home/_most_predicted.html.haml
@@ -6,7 +6,7 @@
       = flag_image(most_predicted.local.flag_name,"small","32x32")
       = most_predicted.local.short_name
     .flag
-      = flag_iamge(most_predicted.visitor.flag_name,"small","32x32")
+      = flag_image(most_predicted.visitor.flag_name,"small","32x32")
       = most_predicted.visitor.short_name
     %p
       = "#{most_predicted.predictions_count} pronósticos"
