Changed CSS for new flags

--- a/app/views/predictions/_most_comments.html.haml
+++ b/app/views/predictions/_most_comments.html.haml
@@ -2,6 +2,10 @@
 
 %li{:class=>last_class}
   %a{:href => match_path(most_comments.match)}
-    .flag.small{:class=>most_comments.match.local.flag_name, :title=>most_comments.match.local.name}= most_comments.match.local.short_name
-    .flag.small{:class=>most_comments.match.visitor.flag_name, :title=>most_comments.match.visitor.name}= most_comments.match.visitor.short_name
+    .flag
+      = flag_image("most_comments.match.local.flag_name","small","32x32")
+      = most_comments.match.local.short_name
+    .flag
+      = flag_image("most_comments.match.visitor.flag_name","small","32x32")
+      = most_comments.match.visitor.short_name
     %p= "#{most_comments.comments_count} comentarios"
