--- a/app/views/profiles/_past_match.html.haml
+++ b/app/views/profiles/_past_match.html.haml
@@ -5,7 +5,8 @@
         .flag
           .image
             %span.flag
-              = flag_image (past_match.match.local.flag_name,"small","32x32") --
+              = flag_image (past_match.match.local.flag_name,"small","32x32")
+              ="--"
             %br
             = past_match.match.local.short_name
           .prediction_result
@@ -14,7 +15,8 @@
         .flag
           .image
             %span.flag
-              = flag_image (past_match.match.visitor.flag_name,"small","32x32") --
+              = flag_image (past_match.match.visitor.flag_name,"small","32x32") 
+              = "--"
             %br
             = past_match.match.visitor.short_name
           .prediction_result
@@ -27,10 +29,12 @@
       .result
         %strong
           %span.flag
-            = flag_name(past_match.match.local.flag_name,"small","16x16") --
+            = flag_name(past_match.match.local.flag_name,"small","16x16") 
+            = "--"
           %span.goals= past_match.match.first_team_goals
         %strong
           %span.flag
-            = flag_name(past_match.match.visitor.flag_name,"small","16x16") --
+            = flag_name(past_match.match.visitor.flag_name,"small","16x16") 
+            = "--"
           %span.goals= past_match.match.second_team_goals
       .clear
