updated templates with new img flags

--- a/app/views/matches/index.haml
+++ b/app/views/matches/index.haml
@@ -29,7 +29,7 @@
                       = match.local.short_name
                   %td.flag
                     %a{:href=>match_path(match)}
-                      = flag_iamge(match.visitor.flag_name,"small","32x32")
+                      = flag_image(match.visitor.flag_name,"small","32x32")
                       = match.visitor.short_name
                 %tr
                   %td.first goles
