--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -99,8 +99,8 @@
       /[if gte IE 8]
         :erb
           </div>
-      = javascript_include_tag 'jquery', 'jrails','fancybox/jquery.fancybox-1.3.1.pack','fancybox/jquery.easing-1.3.pack','fancybox/jquery.mousewheel-3.0.2.pack','jcarousellite_1.0.1.min', :cache => "utils"
-      = javascript_include_tag 'countdown/jquery.countdown.min','date','jquery.countdown-es','application', :cache => "app"
+      = javascript_include_tag 'jquery', 'jrails','fancybox/jquery.fancybox-1.3.1.pack','fancybox/jquery.easing-1.3.pack','fancybox/jquery.mousewheel-3.0.2.pack','jcarousellite_1.0.1.min', 'countdown/jquery.countdown.min','date','jquery.countdown-es', :cache => "utils"
+      = javascript_include_tag 'application', :cache => "app"
       = javascript_include_tag "http://s7.addthis.com/js/250/addthis_widget.js"
       :erb
         <script type="text/javascript">
