--- a/app/views/home/about_us.haml
+++ b/app/views/home/about_us.haml
@@ -1,35 +1,22 @@
 - @body_class = "register home"
 - @title = "Patatoon :: Sobre Patatoon"
+
 %h2 
   %span ¿Qué es 
   Patatoon?
 
 %h3= "Nuestra idea"
 
-%p Patatoon será la comunidad del Avatar personalizado, creando una  nueva tendencia en Redes
-Sociales donde el usuario sera protagonista principal del contenido tanto individualmente como
-grupalmente.
+%p Patatoon será la comunidad del Avatar personalizado, creando una  nueva tendencia en Redes Sociales donde el usuario sera protagonista principal del contenido tanto individualmente como grupalmente.
 
-%p Patatoon nace con esta nueva idea de unir aún mas a los usuarios dentro de las temáticas actuales,
- dando les una nueva manera de expresión visual, que sera el Avatar personalizado, expresando de 
- manera diferente los temas que aborden y que generen interés colectivo. 
+%p Patatoon nace con esta nueva idea de unir aún mas a los usuarios dentro de las temáticas actuales, dando les una nueva manera de expresión visual, que sera el Avatar personalizado, expresando de manera diferente los temas que aborden y que generen interés colectivo. 
  
-%p Patatoon está dirigido a todos los que quieran expresar sus inquietudes en cualquier
-tema, sin importar la edad, condición o tendencia del usuario.
+%p Patatoon está dirigido a todos los que quieran expresar sus inquietudes en cualquier tema, sin importar la edad, condición o tendencia del usuario.
 
-%p Patatoon es un portal donde la expresión es libre, utilizando para este caso un formato gráfico
-lúdico, el avatar podrá ser la extension personal del usuario rompiendo el formato convencional de
-las plataformas  sociales. 
+%p Patatoon es un portal donde la expresión es libre, utilizando para este caso un formato gráfico lúdico, el avatar podrá ser la extension personal del usuario rompiendo el formato convencional de las plataformas  sociales. 
 
-%p En esta primera etapa trataremos de ser el vinculo de socialización grupal utilizando temas 
-en común, haciendo de las comunidades aún mas interactivas, creando cadenas colectivas virtuales,
-generando opinión dentro de la sociedad o comunidad, tanto por un bien en común como para solidarizarse
-con un solo movimiento.
+%p En esta primera etapa trataremos de ser el vinculo de socialización grupal utilizando temas en común, haciendo de las comunidades aún mas interactivas, creando cadenas colectivas virtuales, generando opinión dentro de la sociedad o comunidad, tanto por un bien en común como para soldarizarse con un solo movimiento. 
 
-%p El reto de Patatoon será cambiar la interacción del usuario, pudiendo éste no solo escoger las
-temáticas que le  interesen si no también crear foros de discusión aportando cierto valor de
-opinión dentro de su grupo como de la comunidad Patatoon,
+%p El reto de Patatoon será cambiar la interacción del usuario, pudiendo éste no solo escoger las temáticas que le  interesen si no también crear foros de discusión aportando cierto valor de opinión dentro de su grupo como de la comunidad Patatoon,
 
-%p Patatoon tendrá la  misión de ser no solo la expresión personalizada del usuario, sino  que
-canalizara la verdadera opinión de este en un portal que mezclará un formato lúdico con la
-participación permanente siendo la imagen activa del usuario.
+%p Patatoon tendrá la  misión de ser no solo la expresión personalizada del usuario, sino  que canalizara la verdadera opinión de este en un portal que mezclará un formato lúdico con la participación permanente siendo la imagen activa del usuario.
