--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -47,6 +47,7 @@
             %h3 ¡Viaja al final de la copa Libertadores!
             %h4 Acierta en los pronósticos y gana puntos. Los que más tengan, participan en el concurso 
             %p ¿Qué esperas? ¡Únete a Patatoon y viaja con todo pagado!
+            = link_to "Lee las reglas", rules_path, {:id=>"reules", :class=>"button"}
         / %li.img
         /   %a{:href => "#"}
         /     %img{:height => "271", :src => "images/banners/banner-2.jpg", :width => "815"}/
