Punctuation marks that Xavier forgot

--- a/app/views/home/rules.haml
+++ b/app/views/home/rules.haml
@@ -29,18 +29,18 @@
     Habrá ganadores por ronda donde se publicarán a los patatoneros que estén liderando la punta en puntos.
   
   %p 
-    A partir de 8vos de final, los patatoneros que tengan más puntos tendrán premios como pasajes nacionales
+    A partir de 8vos de final, los patatoneros que tengan más puntos tendrán premios como pasajes nacionales.
 
   %p
-    El premio mayor será un pasaje a ver la final de la Copa Libertadores que será sorteado entre los Patatoneros que hayan acumulado el puntaje mas alto entre los demas participantes
+    El premio mayor será un pasaje a ver la final de la Copa Libertadores que será sorteado entre los Patatoneros que hayan acumulado el puntaje mas alto entre los demas participantes.
   %p
-    El concurso será válido solo en territorio nacional y para ser entregado deberá el ganador demostrar mayoría de edad (en caso de ser menor de edad, podrá reclamar el premio con una persona mayor responsable por él)
+    El concurso será válido solo en territorio nacional y para ser entregado deberá el ganador demostrar mayoría de edad (en caso de ser menor de edad, podrá reclamar el premio con una persona mayor responsable por él).
 
   %p 
     Todo premio tendra vigencia 30 dias calendarios para reclamarlos.
 
   %p
-    El premio es  personal e instransferible
+    El premio es personal e instransferible.
 
   %p 
     Patatoon se compromete no sólo en publicar los datos del ganador en su página, como tambien la entrega del premio.
