Punctuation marks that Xavier forgot

--- a/app/views/home/rules.haml
+++ b/app/views/home/rules.haml
@@ -45,6 +45,6 @@
   %p 
     Patatoon se compromete no sólo en publicar los datos del ganador en su página, como tambien la entrega del premio.
   %p 
-    Patatoon no se responsabiliza por cambios de ultimo momento que la empresa aérea y o la fecha programada para el partido sea modificada
+    Patatoon no se responsabiliza por cambios de ultimo momento que la empresa aérea y o la fecha programada para el partido sea modificada.
   %p
-    Patatoon se rige a todas las jurisdicciones de leyes peruanas
+    Patatoon se rige a todas las jurisdicciones de leyes peruanas.
