--- a/app/views/home/about_us.haml
+++ b/app/views/home/about_us.haml
@@ -19,6 +19,6 @@
 
   %p En esta primera etapa trataremos de ser el vinculo de socialización grupal utilizando temas en común, haciendo de las comunidades aún mas interactivas, creando cadenas colectivas virtuales, generando opinión dentro de la sociedad o comunidad, tanto por un bien en común como para soldarizarse con un solo movimiento. 
 
-  %p El reto de Patatoon será cambiar la interacción del usuario, pudiendo éste no solo escoger las temáticas que le  interesen si no también crear foros de discusión aportando cierto valor de opinión dentro de su grupo como de la comunidad Patatoon,
+  %p El reto de Patatoon será cambiar la interacción del usuario, pudiendo éste no solo escoger las temáticas que le  interesen si no también crear foros de discusión aportando cierto valor de opinión dentro de su grupo como de la comunidad Patatoon.
 
   %p Patatoon tendrá la  misión de ser no solo la expresión personalizada del usuario, sino  que canalizara la verdadera opinión de este en un portal que mezclará un formato lúdico con la participación permanente siendo la imagen activa del usuario.
